; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/lima/extr_lima_device.c_lima_device_fini.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/lima/extr_lima_device.c_lima_device_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lima_device = type { i32, i32, i64, i32 }

@lima_ip_num = common dso_local global i32 0, align 4
@LIMA_PAGE_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lima_device_fini(%struct.lima_device* %0) #0 {
  %2 = alloca %struct.lima_device*, align 8
  %3 = alloca i32, align 4
  store %struct.lima_device* %0, %struct.lima_device** %2, align 8
  %4 = load %struct.lima_device*, %struct.lima_device** %2, align 8
  %5 = call i32 @lima_fini_pp_pipe(%struct.lima_device* %4)
  %6 = load %struct.lima_device*, %struct.lima_device** %2, align 8
  %7 = call i32 @lima_fini_gp_pipe(%struct.lima_device* %6)
  %8 = load i32, i32* @lima_ip_num, align 4
  %9 = sub nsw i32 %8, 1
  store i32 %9, i32* %3, align 4
  br label %10

10:                                               ; preds = %17, %1
  %11 = load i32, i32* %3, align 4
  %12 = icmp sge i32 %11, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %10
  %14 = load %struct.lima_device*, %struct.lima_device** %2, align 8
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @lima_fini_ip(%struct.lima_device* %14, i32 %15)
  br label %17

17:                                               ; preds = %13
  %18 = load i32, i32* %3, align 4
  %19 = add nsw i32 %18, -1
  store i32 %19, i32* %3, align 4
  br label %10

20:                                               ; preds = %10
  %21 = load %struct.lima_device*, %struct.lima_device** %2, align 8
  %22 = getelementptr inbounds %struct.lima_device, %struct.lima_device* %21, i32 0, i32 2
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %37

25:                                               ; preds = %20
  %26 = load %struct.lima_device*, %struct.lima_device** %2, align 8
  %27 = getelementptr inbounds %struct.lima_device, %struct.lima_device* %26, i32 0, i32 3
  %28 = load i32, i32* %27, align 8
  %29 = load i32, i32* @LIMA_PAGE_SIZE, align 4
  %30 = load %struct.lima_device*, %struct.lima_device** %2, align 8
  %31 = getelementptr inbounds %struct.lima_device, %struct.lima_device* %30, i32 0, i32 2
  %32 = load i64, i64* %31, align 8
  %33 = load %struct.lima_device*, %struct.lima_device** %2, align 8
  %34 = getelementptr inbounds %struct.lima_device, %struct.lima_device* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @dma_free_wc(i32 %28, i32 %29, i64 %32, i32 %35)
  br label %37

37:                                               ; preds = %25, %20
  %38 = load %struct.lima_device*, %struct.lima_device** %2, align 8
  %39 = getelementptr inbounds %struct.lima_device, %struct.lima_device* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = call i32 @lima_vm_put(i32 %40)
  %42 = load %struct.lima_device*, %struct.lima_device** %2, align 8
  %43 = call i32 @lima_regulator_fini(%struct.lima_device* %42)
  %44 = load %struct.lima_device*, %struct.lima_device** %2, align 8
  %45 = call i32 @lima_clk_fini(%struct.lima_device* %44)
  ret void
}

declare dso_local i32 @lima_fini_pp_pipe(%struct.lima_device*) #1

declare dso_local i32 @lima_fini_gp_pipe(%struct.lima_device*) #1

declare dso_local i32 @lima_fini_ip(%struct.lima_device*, i32) #1

declare dso_local i32 @dma_free_wc(i32, i32, i64, i32) #1

declare dso_local i32 @lima_vm_put(i32) #1

declare dso_local i32 @lima_regulator_fini(%struct.lima_device*) #1

declare dso_local i32 @lima_clk_fini(%struct.lima_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
